Moved event form outside of drawer component and fixed dark mode making input boxesdark

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,15 @@
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: light;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
